# mini_dl_framework_learning

./: .gitmodules  README.md
notes/: install.md
notes/00/: install.md
notes/01/: DataNode.md
notes/02/: BasicOperation.md
notes/03/: elet_func.md
src/cal/: basic_operation.hpp  elet_func.hpp
src/node/: datatype.h  node.hpp
src/utils/: cal_map_flow.hpp
test/: CMakeLists.txt  test.cpp
